--- a/index.html
+++ b/index.html
@@ -2,16 +2,40 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width">
-		<title>Seja Bem-Vindo</title>
+		<title>Fábio Araújo | Developer</title>
 
-		<link rel="stylesheet" href="../css/reset.css">
-		<link rel="stylesheet" href="../css/style.css">
+		<link rel="stylesheet" href="./assets/css/reset.css">
+		<link rel="stylesheet" href="./assets/css/style.css">
 		<link alt="Fonte Geral do site" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 		<link alt="Fonte das div" href="https://fonts.googleapis.com/css2?family=DynaPuff&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
-<body>
-    <div>
-        <h1>Projetos</h1>
-    </div>
-</body>
+	<body>
+
+		<div class="bin-container">
+			<div class="bin-inicio">
+				<a id="bin-nome">Fábio Araújo</a>
+				<h2>Em uma galáxia, <span>um sistema sideral</span>, um planeta, <span>adquirindo conhecimento</span>, <a id="bin-ref" href="sobre.html">um Profissional de T.I..</a></h2>
+				<div class="caixa">
+			</div>
+				<nav class="menu">
+					<ul id="bin-menu">
+						<li><a href="#">Inicio</a></li>
+						<li><a href="#">Sobre</a></li>
+						<li><a href="#">Resumo</a></li>
+						<li><a href="#">Portifólio</a></li>
+						<li><a href="#">Contato</a></li>
+					</ul>
+				</nav>
+				<div id="bin-redes--sociais">
+					<a href="#" class="fa fa-twitter"></a>
+					<a href="#" class="fa fa-linkedin"></a>
+					<a href="#" class="fa fa-google"></a>
+					<a href="#" class="bi bi-github"></a>
+					<a href="#" class="fa-twitter"></a>
+				</div>
+			</div>
+		</div>
+
+	</body>
 </html>
