--- a/assets/html/sobre.html
+++ b/assets/html/sobre.html
@@ -2,26 +2,53 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width">
-		<title>Seja Bem-Vindo</title>
+		<title id="bin-tit">Fábio Araújo | Developer</title>
 
-		<link rel="stylesheet" href="./assets/css/reset.css">
-		<link rel="stylesheet" href="./assets/css/style.css">
+		<link rel="stylesheet" href="../css/reset.css">
+		<link rel="stylesheet" href="../css/style.css">
 		<link alt="Fonte Geral do site" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 		<link alt="Fonte das div" href="https://fonts.googleapis.com/css2?family=DynaPuff&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 	</head>
 	<body>
-		<div class="caixa">
-			<nav class="menu">
-				<ul>
-					<li><a href="#">Inicio</a></li>
-					<li><a href="#">Teste</a></li>
-					<li><a href="#">Teste1</a></li>
-					<li><a href="#">Teste2</a></li>
-					<li><a href="#">Teste3</a></li>
-					<li><a href="#">Teste4</a></li>
-					<li><a href="#">Teste5</a></li>
-				</ul>
-			</nav>
+		<div class="bg"></div>
+		<div class="star-field">
+		<div class="layer"></div>
+		<div class="layer"></div>
+		<div class="layer"></div>
+		</div>
+        <div class="bin-inicio">
+            <div class="caixa">
+                <nav class="menu">
+                    <ul id="bin-menu">
+                        <li><a href="../../index.html" id="bin-titulo">Fábio Araújo</a></li>
+                        <li><a href="#" id="bin-sobre">Sobre</a></li>
+                        <li><a href="#" id="bin-resumo">Resumo</a></li>
+                        <li><a href="#" id="bin-portifolio">Portifólio</a></li>
+                        <li><a href="#" id="bin-contato">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+		<div class="bin-container">
+				<!-- <div id="bin-redes--sociais">
+					<div id="bin-linkedin">
+						<a href="#" class="fa fa-linkedin"></a>
+					</div>
+					<div id="bin-github">
+						<a href="#" class="fa fa-github"></a>
+					</div>
+					<div id="bin-email">
+						<a href="#" class="fa fa-envelope"></a>
+					</div>
+					<div id="bin-twitter">
+						<a href="https://twitter.com/biinhogod" class="fa fa-twitter"></a>
+					</div>
+						<div id="bin-whatsapp">
+							<a href="#" class="fa fa-whatsapp"></a>
+						</div>
+				</div> -->
 		</div>
 	</body>
 </html>
