--- a/index.html
+++ b/index.html
@@ -9,33 +9,49 @@
 		<link alt="Fonte Geral do site" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 		<link alt="Fonte das div" href="https://fonts.googleapis.com/css2?family=DynaPuff&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 	</head>
 	<body>
-
+		<div class="bg"></div>
+		<div class="star-field">
+		<div class="layer"></div>
+		<div class="layer"></div>
+		<div class="layer"></div>
+		</div>
 		<div class="bin-container">
 			<div class="bin-inicio">
-				<a id="bin-nome">Fábio Araújo</a>
+				<a id="bin-nome" href="#" style="text-decoration:none;">Fábio Araújo</a>
 				<h2>Em uma galáxia, <span>um sistema sideral</span>, um planeta, <span>adquirindo conhecimento</span>, <a id="bin-ref" href="sobre.html">um Profissional de T.I..</a></h2>
 				<div class="caixa">
-			</div>
-				<nav class="menu">
-					<ul id="bin-menu">
-						<li><a href="#">Inicio</a></li>
-						<li><a href="#">Sobre</a></li>
-						<li><a href="#">Resumo</a></li>
-						<li><a href="#">Portifólio</a></li>
-						<li><a href="#">Contato</a></li>
-					</ul>
-				</nav>
+					<nav class="menu">
+						<ul id="bin-menu">
+							<li><a href="#" id="bin-inicio">Inicio</a></li>
+							<li><a href="./assets/html/sobre.html" id="bin-sobre">Sobre</a></li>
+							<li><a href="#" id="bin-resumo">Resumo</a></li>
+							<li><a href="#" id="bin-portifolio">Portifólio</a></li>
+							<li><a href="#" id="bin-contato">Contato</a></li>
+						</ul>
+					</nav>
+				</div>
 				<div id="bin-redes--sociais">
-					<a href="#" class="fa fa-twitter"></a>
-					<a href="#" class="fa fa-linkedin"></a>
-					<a href="#" class="fa fa-google"></a>
-					<a href="#" class="bi bi-github"></a>
-					<a href="#" class="fa-twitter"></a>
+					<div id="bin-linkedin">
+						<a href="#" class="fa fa-linkedin"></a>
+					</div>
+					<div id="bin-github">
+						<a href="#" class="fa fa-github"></a>
+					</div>
+					<div id="bin-email">
+						<a href="#" class="fa fa-envelope"></a>
+					</div>
+					<div id="bin-twitter">
+						<a href="https://twitter.com/biinhogod" class="fa fa-twitter"></a>
+					</div>
+						<div id="bin-whatsapp">
+							<a href="#" class="fa fa-whatsapp"></a>
+						</div>
 				</div>
 			</div>
 		</div>
-
+        <script src="./assets/js/index.js"></script>
 	</body>
 </html>
