--- a/assets/html/sobre.html
+++ b/assets/html/sobre.html
@@ -20,19 +20,45 @@
 		</div>
         <div class="bin-inicio">
             <div class="caixa">
-                <nav class="menu">
+                <nav class="menu" style="background: #0000004f; position: unset;">
                     <ul id="bin-menu">
                         <li><a href="../../index.html" id="bin-titulo">Fábio Araújo</a></li>
                         <li><a href="#" id="bin-sobre">Sobre</a></li>
                         <li><a href="#" id="bin-resumo">Resumo</a></li>
                         <li><a href="#" id="bin-portifolio">Portifólio</a></li>
                         <li><a href="#" id="bin-contato">Contato</a></li>
+
+						<div id="bin-redes--sociais2">
+							<div id="bin-linkedin">
+								<a href="#" class="fa fa-linkedin"></a>
+							</div>
+							<div id="bin-github">
+								<a href="#" class="fa fa-github"></a>
+							</div>
+							<div id="bin-email">
+								<a href="#" class="fa fa-envelope"></a>
+							</div>
+							<div id="bin-twitter">
+								<a href="https://twitter.com/biinhogod" class="fa fa-twitter"></a>
+							</div>
+								<div id="bin-whatsapp">
+									<a href="#" class="fa fa-whatsapp"></a>
+								</div>
+						</div>
                     </ul>
                 </nav>
             </div>
         </div>
-		<div class="bin-container">
-				<!-- <div id="bin-redes--sociais">
+		<div>aaaa</div>
+		<section id="bin-sobre-info">
+			<div style="position: relative; top: 10vh;">
+				<div>
+					<p style="color: white">Teste</p>
+				</div>
+			</div>
+		</section>
+		<!-- <div class="bin-container">
+				<div id="bin-redes--sociais">
 					<div id="bin-linkedin">
 						<a href="#" class="fa fa-linkedin"></a>
 					</div>
@@ -48,7 +74,7 @@
 						<div id="bin-whatsapp">
 							<a href="#" class="fa fa-whatsapp"></a>
 						</div>
-				</div> -->
-		</div>
+				</div>
+		</div> -->
 	</body>
 </html>
