--- a/index.html
+++ b/index.html
@@ -19,39 +19,41 @@
 		<div class="layer"></div>
 		</div>
 		<div class="bin-container">
-			<div class="bin-inicio">
-				<a id="bin-nome" href="#" style="text-decoration:none;">Fábio Araújo</a>
-				<h2>Em uma galáxia, <span>um sistema sideral</span>, um planeta, <span>adquirindo conhecimento</span>, <a id="bin-ref" href="sobre.html">um Profissional de T.I..</a></h2>
-				<div class="caixa">
-					<nav class="menu">
-						<ul id="bin-menu">
-							<li><a href="#" id="bin-inicio">Inicio</a></li>
-							<li><a href="./assets/html/sobre.html" id="bin-sobre">Sobre</a></li>
-							<li><a href="#" id="bin-resumo">Resumo</a></li>
-							<li><a href="#" id="bin-portifolio">Portifólio</a></li>
-							<li><a href="#" id="bin-contato">Contato</a></li>
-						</ul>
-					</nav>
-				</div>
-				<div id="bin-redes--sociais">
-					<div id="bin-linkedin">
-						<a href="#" class="fa fa-linkedin"></a>
+				<section id="bin-pagina-inicio">
+				<div class="bin-inicio">
+					<a id="bin-nome" href="#" style="text-decoration:none;">Fábio Araújo</a>
+					<h2>Em uma galáxia, <span>um sistema sideral</span>, um planeta, <span>adquirindo conhecimento</span>, <a id="bin-ref" href="sobre.html">um Profissional de T.I..</a></h2>
+					<div class="caixa">
+						<nav class="menu">
+							<ul id="bin-menu">
+								<li><a href="#" id="bin-inicio">Inicio</a></li>
+								<li><a href="./assets/html/sobre.html" id="bin-sobre">Sobre</a></li>
+								<li><a href="#" id="bin-resumo">Resumo</a></li>
+								<li><a href="#" id="bin-portifolio">Portifólio</a></li>
+								<li><a href="#" id="bin-contato">Contato</a></li>
+							</ul>
+						</nav>
 					</div>
-					<div id="bin-github">
-						<a href="#" class="fa fa-github"></a>
-					</div>
-					<div id="bin-email">
-						<a href="#" class="fa fa-envelope"></a>
-					</div>
-					<div id="bin-twitter">
-						<a href="https://twitter.com/biinhogod" class="fa fa-twitter"></a>
-					</div>
-						<div id="bin-whatsapp">
-							<a href="#" class="fa fa-whatsapp"></a>
+					<div id="bin-redes--sociais">
+						<div id="bin-linkedin">
+							<a href="#" class="fa fa-linkedin"></a>
 						</div>
+						<div id="bin-github">
+							<a href="#" class="fa fa-github"></a>
+						</div>
+						<div id="bin-email">
+							<a href="#" class="fa fa-envelope"></a>
+						</div>
+						<div id="bin-twitter">
+							<a href="https://twitter.com/biinhogod" class="fa fa-twitter"></a>
+						</div>
+							<div id="bin-whatsapp">
+								<a href="#" class="fa fa-whatsapp"></a>
+							</div>
+					</div>
 				</div>
 			</div>
-		</div>
+		</section>
         <script src="./assets/js/index.js"></script>
 	</body>
 </html>
