--- a/assets/html/sobre.html
+++ b/assets/html/sobre.html
@@ -20,7 +20,7 @@
 		</div>
         <div class="bin-inicio">
             <div class="caixa">
-                <nav class="menu" style="background: #0000004f; position: unset;">
+                <nav class="menu" style="background: #0000004f;">
                     <ul id="bin-menu">
                         <li><a href="../../index.html" id="bin-titulo">Fábio Araújo</a></li>
                         <li><a href="#" id="bin-sobre">Sobre</a></li>
@@ -50,10 +50,11 @@
             </div>
         </div>
 		<div>aaaa</div>
-		<section id="bin-sobre-info">
+		<section id="bin-sobre-info" >
+			<a>aaaa</a>
 			<div style="position: relative; top: 10vh;">
 				<div>
-					<p style="color: white">Teste</p>
+					<p style="color: white">AAAAAAAAAAAA se você me chamar eu não vou negar</p>
 				</div>
 			</div>
 		</section>
