--- a/assets/html/sobre.html
+++ b/assets/html/sobre.html
@@ -5,7 +5,7 @@
 		<title id="bin-tit">Fábio Araújo | Developer</title>
 
 		<link rel="stylesheet" href="../css/reset.css">
-		<link rel="stylesheet" href="../css/style.css">
+		<link rel="stylesheet" href="../css/style2.css">
 		<link alt="Fonte Geral do site" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 		<link alt="Fonte das div" href="https://fonts.googleapis.com/css2?family=DynaPuff&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -18,64 +18,29 @@
 		<div class="layer"></div>
 		<div class="layer"></div>
 		</div>
-        <div class="bin-inicio">
-            <div class="caixa">
-                <nav class="menu" style="background: #0000004f;">
-                    <ul id="bin-menu">
-                        <li><a href="../../index.html" id="bin-titulo">Fábio Araújo</a></li>
-                        <li><a href="#" id="bin-sobre">Sobre</a></li>
-                        <li><a href="#" id="bin-resumo">Resumo</a></li>
-                        <li><a href="#" id="bin-portifolio">Portifólio</a></li>
-                        <li><a href="#" id="bin-contato">Contato</a></li>
-
-						<div id="bin-redes--sociais2">
-							<div id="bin-linkedin">
-								<a href="#" class="fa fa-linkedin"></a>
-							</div>
-							<div id="bin-github">
-								<a href="#" class="fa fa-github"></a>
-							</div>
-							<div id="bin-email">
-								<a href="#" class="fa fa-envelope"></a>
-							</div>
-							<div id="bin-twitter">
-								<a href="https://twitter.com/biinhogod" class="fa fa-twitter"></a>
-							</div>
-								<div id="bin-whatsapp">
-									<a href="#" class="fa fa-whatsapp"></a>
-								</div>
-						</div>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-		<div>aaaa</div>
-		<section id="bin-sobre-info" >
-			<a>aaaa</a>
-			<div style="position: relative; top: 10vh;">
-				<div>
-					<p style="color: white">AAAAAAAAAAAA se você me chamar eu não vou negar</p>
-				</div>
+        <header>
+			<div class="caixa">
+				<nav class="menu">
+					<ul>
+						<li><a href="../../index.html" id="bin-inicio">Inicio</a></li>
+						<li><a href="#" id="bin-sobre">Sobre</a></li>
+						<li><a href="#" id="bin-resumo">Resumo</a></li>
+						<li><a href="#" id="bin-portifolio">Portifólio</a></li>
+						<li><a href="#" id="bin-contato">Contato</a></li>
+					   </li>
+					</ul>
+				</nav>
 			</div>
-		</section>
-		<!-- <div class="bin-container">
-				<div id="bin-redes--sociais">
-					<div id="bin-linkedin">
-						<a href="#" class="fa fa-linkedin"></a>
+		</header>
+		<main>
+			<section class="bin-conteudo">
+				<div class="bin-layout">
+					<div class="bin-layout2">
+						<h1 id="bin-titulo">SOBRE MIM..</h1>
+						<h2 id="bin-sub-titulo">Olá eu sou Fábio Araújo !</h2>
 					</div>
-					<div id="bin-github">
-						<a href="#" class="fa fa-github"></a>
-					</div>
-					<div id="bin-email">
-						<a href="#" class="fa fa-envelope"></a>
-					</div>
-					<div id="bin-twitter">
-						<a href="https://twitter.com/biinhogod" class="fa fa-twitter"></a>
-					</div>
-						<div id="bin-whatsapp">
-							<a href="#" class="fa fa-whatsapp"></a>
-						</div>
 				</div>
-		</div> -->
+			</section>
+		</main>
 	</body>
 </html>
