--- a/assets/html/sobre.html
+++ b/assets/html/sobre.html
@@ -36,8 +36,8 @@
 			<section class="bin-conteudo">
 				<div class="bin-layout">
 					<div class="bin-layout2">
-						<h1 id="bin-titulo">SOBRE MIM..</h1>
-						<h2 id="bin-sub-titulo">Olá eu sou Fábio Araújo !</h2>
+						<h1 id="bin-m-titulo">SOBRE MIM..</h1>
+						<h2 id="bin-titulo">Olá eu sou Fábio Araújo !</h2>
 					</div>
 				</div>
 			</section>
