--- a/assets/html/sobre.html
+++ b/assets/html/sobre.html
@@ -6,8 +6,9 @@
 
 		<link rel="stylesheet" href="../css/reset.css">
 		<link rel="stylesheet" href="../css/style2.css">
-		<link alt="Fonte Geral do site" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-		<link alt="Fonte das div" href="https://fonts.googleapis.com/css2?family=DynaPuff&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	</head>
@@ -36,8 +37,23 @@
 			<section class="bin-conteudo">
 				<div class="bin-layout">
 					<div class="bin-layout2">
-						<h1 id="bin-m-titulo">SOBRE MIM..</h1>
-						<h2 id="bin-titulo">Olá eu sou Fábio Araújo !</h2>
+						<h1 id="bin-m-titulo">SOBRE MIM</h1>
+						<h2 id="bin-titulo">VAMOS ME CONHECER</h2>
+						<h3 id="bin-titulo2"> Gestor de T.I / Desenvolvedor de Software & Web / Web Designer </h2>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis necessitatibus veritatis minus beatae obcaecati illo possimus atque culpa labore dolore incidunt rem, velit amet corrupti exercitationem doloribus tenetur mollitia fugiat?</p>
+						<h1 id="bin-sub-m-titulo">Informações </h1>
+						<div style="display: flex">
+							<div style="flex: 1">
+								<li>1-</li>
+								<li>1-</li>
+								<li>1-</li>
+							</div>
+							<div style="flex: 1">
+								<li>2-</li>
+								<li>2-</li>
+								<li>2-</li>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
