--- a/assets/html/sobre.html
+++ b/assets/html/sobre.html
@@ -40,23 +40,50 @@
 						<h1 id="bin-m-titulo">SOBRE MIM</h1>
 						<h2 id="bin-titulo">VAMOS ME CONHECER</h2>
 						<h3 id="bin-titulo2"> Gestor de T.I / Desenvolvedor de Software & Web / Web Designer </h2>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis necessitatibus veritatis minus beatae obcaecati illo possimus atque culpa labore dolore incidunt rem, velit amet corrupti exercitationem doloribus tenetur mollitia fugiat?</p>
+						<p>Desenvolvedor e web designer em São Paulo. Faço freelancer em pequenos projetos quando estou no meu tempo livre, Sempre buscando conhecimento, apaixonado por tecnologia, vivendo e programando oque a vida tem de melhor...</p>
 						<h1 id="bin-sub-m-titulo">Informações </h1>
-						<div style="display: flex">
-							<div style="flex: 1">
-								<li>1-</li>
-								<li>1-</li>
-								<li>1-</li>
+						<div style="display: flex" class="bin-info">
+							<div style="flex: 1" >
+								<li>Companhia Atual: <a href="https://foundever.com/pt-br/">Foundever</a></li>
+								<li>Contato: <a href="tel:+5511949195636">(11) 94919-5636</a></li>
+								<li>Cidade: <a href="https://goo.gl/maps/279xuj24jviKtZSS9">São Paulo, Brazil</a></li>
 							</div>
 							<div style="flex: 1">
-								<li>2-</li>
-								<li>2-</li>
-								<li>2-</li>
+								<li>Formação: <a>Gestor de T.I / Developer Full Stack</a> </li>
+								<li>Site: <a href="www.Chabisco.com.br">www.Chabisco.com.br</a></li>
+								<li>Freelance: <a>Disponível</a></li>
 							</div>
+						</div>
+						<div class="bin-tot-info">
+							<div >
+								<div>
+									<h2></h2>
+									<h1>13</h1>
+									<h3>Clientes Satisfeitos</h3>
+								</div>
+							</div>
+							<div>
+								<div>
+									<h2></h2>
+									<h1>17</h1>
+									<h3>Projetos</h3>
+								</div>
+							</div>
+							<div>
+								<div>
+									<h2></h2>
+									<h1>5</h1>
+									<h3>Horas de codificação por dia</h3>
+								</div>
+							</div>
+						</div>
+						<h1 id="bin-sub-m-titulo">Habilidades </h1>
+						<div class="bin-habilidades">
+							<div></div>
 						</div>
 					</div>
 				</div>
 			</section>
 		</main>
 	</body>
-</html>
+	</html>
