--- a/assets/html/sobre.html
+++ b/assets/html/sobre.html
@@ -13,11 +13,11 @@
 
 	</head>
 	<body>
-		<div class="bg"></div>
-		<div class="star-field">
-		<div class="layer"></div>
-		<div class="layer"></div>
-		<div class="layer"></div>
+		<div class="bin-bg"></div>
+		<div class="bin-estrelas">
+		<div class="bin-camada"></div>
+		<div class="bin-camada"></div>
+		<div class="bin-camada"></div>
 		</div>
         <header>
 			<div class="caixa">
@@ -85,5 +85,9 @@
 				</div>
 			</section>
 		</main>
+		<footer>
+			<img src="assets/img/principal/logo.png">
+			<p class="copyright">&copy; Fábio Araújo | Chabisco</p>
+		</footer>
 	</body>
 </html>
