--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 	</head>
 	<body>
-		<div class="bg"></div>
-		<div class="star-field">
-		<div class="layer"></div>
-		<div class="layer"></div>
-		<div class="layer"></div>
+		<div class="bin-bg"></div>
+		<div class="bin-estrelas">
+		<div class="bin-camada"></div>
+		<div class="bin-camada"></div>
+		<div class="bin-camada"></div>
 		</div>
 		<div class="bin-container">
 				<section id="bin-pagina-inicio">
