--- a/assets/html/sobre.html
+++ b/assets/html/sobre.html
@@ -83,17 +83,17 @@
 						</div>
 						<div id="bin-skills-bar">
 							<div id="bin-skills-divf">
-								<p>HTML / CSS / BOOTSTRAP / JQUERY</p>
+								<p>HTML / CSS / BOOTSTRAP / jQuery</p>
 								<div class="bin-container-skills">
 								  <div class="skills html">90%</div>
 								</div>
 								
-								<p>NODEJS / REACT / REACT NATIVE</p>
+								<p>NodeJS / React / React Native</p>
 								<div class="bin-container-skills">
 								  <div class="skills css">80%</div>
 								</div>
 								
-								<p>MYSQL / POSTGRESS / NOSQL / REST API</p>
+								<p>MySQL / SQL / PostgreSQL / REST API</p>
 								<div class="bin-container-skills">
 								  <div class="skills js">65%</div>
 								</div>
